--- a/src/views/blank_application.pug
+++ b/src/views/blank_application.pug
@@ -106,8 +106,8 @@ block main
             hr
 
         .col-lg-8.m-3
-            label.form-label(for='pronoun') What pronouns do you go by?
-            select#pronoun.form-select(name='pronoun', required)
+            label.form-label(for='pronouns') What pronouns do you go by?
+            select#pronouns.form-select(name='pronouns', required)
                 option(value='', disabled='') Select
                 option(value='he/him', selected) he/him
                 option(value='she/her') she/her
@@ -186,8 +186,8 @@ block main
             .invalid-feedback
                 | Ensure this is a Github link
         .col-lg-8.m-3
-            label.form-label(for='linkedin') LinkedIn
-            input#linkedin(type="url" class='form-control' placeholder='LinkedIn' pattern=".*\.linkedin\..*", name='linkedin', required, value='https://linkedin.com/')
+            label.form-label(for='linked_in') LinkedIn
+            input#linked_in(type="url" class='form-control' placeholder='LinkedIn' pattern=".*\.linkedin\..*", name='linked_in', required, value='https://linkedin.com/')
             .invalid-feedback
                 | Ensure this is a Linkedin link
 
