--- a/src/views/application.pug
+++ b/src/views/application.pug
@@ -7,8 +7,8 @@ block main
         .col-lg-8.m-3
             label.form-label(for='age') Age:
             input#age.form-control(type='number', name='age', min='13', max='99', required)
-            .invalid-feedback
-                | Please enter your age
+            //.invalid-feedback
+            //    | Please enter your age
 
         .col-lg-8.m-3
             label.form-label(for='country') Country
