--- a/src/views/application.pug
+++ b/src/views/application.pug
@@ -1,8 +1,7 @@
-extends layout
+extends layout/layout
 
 block main
     form(method="POST")
-
 
         .col-lg-8.m-3
             label.form-label(for='age') Age:
