--- a/src/views/application.pug
+++ b/src/views/application.pug
@@ -2,7 +2,10 @@ extends includes/dashboard_bar
 
 block main
 
-    form(method="POST")
+
+    formform.regContainer.pb-3(method="POST")
+        .display-5.p-2.m-3 Required Contact Information
+        hr
         .col-lg-8.m-3
             label.form-label(for='age') Age:
             input#age.form-control(type='number', name='age', min='13', max='99', required)
