--- a/src/views/application.pug
+++ b/src/views/application.pug
@@ -3,7 +3,7 @@ extends includes/dashboard_bar
 block main
 
 
-    formform.regContainer.pb-3(method="POST")
+    form.regContainer.pb-3(method="POST")
         .display-5.p-2.m-3 Required Contact Information
         hr
         .col-lg-8.m-3
