--- a/src/views/application.pug
+++ b/src/views/application.pug
@@ -115,7 +115,7 @@ block main
 
         .col-lg-8.m-3
             label.form-label(for='sexOrient') Sexual Orientation
-            select#sexOrient.form-select(name="sex_orient" type="text")
+            select#sexOrient.form-select(name="sex_orient")
                 option(disabled) Select
                 option(value='Heterosexual or straight', selected) Heterosexual or straight
                 option(value='Gay or lesbian') Gay or lesbian
