--- a/src/views/hardware_items.pug
+++ b/src/views/hardware_items.pug
@@ -75,14 +75,16 @@ block main
         table.table.table-striped.table-bordered.my-4#myTable
             thead
                 tr
-        //            th(scope='col')
-        //            th(scope='col') Name
-        //            th(scope='col') Link
-        //            th(scope='col') Category
-        //            th(scope='col') Status
-        //            th(scope='col') Location
-        //        tbody
-        //            tr
+                    th(scope='col')
+                    th(scope='col') Name
+                    th(scope='col') Link
+                    th(scope='col') Category
+                    th(scope='col') Status
+                    th(scope='col') Location
+                tbody
+                    tr
+                        th(scope='row')
+                            input#checkboxNoLabel.form-check-input(type='checkbox')
         //                each hardware of hardware_items
         //                    tr
         //                        th(scope='row')
