--- a/src/views/event_applications.pug
+++ b/src/views/event_applications.pug
@@ -43,28 +43,31 @@ block main
                         th Linkedin
 
                 tbody
-                    each event_application of event_applications
-                        tr
-                            th(scope='row')
-                                input.form-check-input(type='checkbox', value=event_application[0], name='eventApplication')
-
-                            td
-                                a(href= '/dashboard/event_applications/' + event_application[0])= event_application[0]
-
-                            td= event_application[2]
-                            td= event_application[6]
-                            td= event_application[7]
-                            td= event_application[8]
-                            td= event_application[9]
-                            td= event_application[10]
-                            td= event_application[11]
-                            td= event_application[12]
-                            td= event_application[13]
-                            td= event_application[14]
-                            td= event_application[15]
-                            td= event_application[16]
-                            td= event_application[17]
-                            td= event_application[18]
-                            td= event_application[19]
-                            td= event_application[20]
-                            td= event_application[21]
+                    tr
+                        th(scope='row')
+                            input#checkboxNoLabel.form-check-input(type='checkbox')
+                    // each event_application of event_applications
+                    //     tr
+                    //         th(scope='row')
+                    //             input.form-check-input(type='checkbox', value=event_application[0], name='eventApplication')
+                    //
+                    //         td
+                    //             a(href= '/dashboard/event_applications/' + event_application[0])= event_application[0]
+                    //
+                    //         td= event_application[2]
+                    //         td= event_application[6]
+                    //         td= event_application[7]
+                    //         td= event_application[8]
+                    //         td= event_application[9]
+                    //         td= event_application[10]
+                    //         td= event_application[11]
+                    //         td= event_application[12]
+                    //         td= event_application[13]
+                    //         td= event_application[14]
+                    //         td= event_application[15]
+                    //         td= event_application[16]
+                    //         td= event_application[17]
+                    //         td= event_application[18]
+                    //         td= event_application[19]
+                    //         td= event_application[20]
+                    //         td= event_application[21]
